--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
     "react": "^17.0.1",
