--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "immutability-helper": "^3.1.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.8",
     "passport": "^0.4.1",
     "passport-local-mongoose": "^6.0.1",
